# amoeba

./: .gitignore  Cargo.toml
src/: gui.rs  main.rs  query.rs  searcher.rs
src/searcher/: file_search.rs  mod.rs  test_search.rs  wikipedia.rs
