[package]
name = "ameoba"
version = "0.1.0"
edition = "2021"
authors = ["Arvin Kushwaha <arvin.singh.kushwaha@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
futures = "0.3.21"
urlencoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
eyre = "0.6.8"
simplelog = "0.12.0"
egui = "0.18.1"
eframe = "0.18.0"
async-trait = "0.1.53"