[package]
name = "amoeba"
version = "0.1.0"
edition = "2021"
authors = ["Arvin Kushwaha <arvin.singh.kushwaha@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
async-stream = "0.3.3"
hyper-tls = "0.5.0"
http = "0.2.7"
lazy_static = "1.4.0"
urlencoding = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
log = "0.4.17"
eyre = "0.6.8"
simplelog = "0.12.0"
egui = "0.18.1"
eframe = "0.18.0"
async-trait = "0.1.53"
futures-timer = "3.0.2"
tokio-serde-json = "0.3.0"
futures = "0.3.21"
